rootskel (0.79) UNRELEASED; urgency=low

  * Colin Watson
    - Load i8042 and atkbd modules on powerpc 2.6. Some subarchitectures
      require them.

 -- Colin Watson <cjwatson@debian.org>  Mon, 28 Jun 2004 14:09:01 +0100

rootskel (0.78) unstable; urgency=low

  * Bastian Blank
    - Revert frontend detection change and set DEBIAN_FRONTEND to none.

 -- Bastian Blank <waldi@debian.org>  Sun, 27 Jun 2004 20:23:24 +0200

rootskel (0.77) unstable; urgency=low

  * Bastian Blank
    - Add source directories for rootskel-bootfloppy and rootskel-locale.
    - Remove unused linuxrc files.
    - Add terminal definitions for /dev/pts/*.
    - Add support for different menues, used by network-console.
  * Martin F. Krafft
    - klogd reads the entire buffer, so running dmesg at sysinit is
      unnecessary.
  * Mario Lang
    - Run frontend detection before S25env2debconf (Closes: #256001).

 -- Colin Watson <cjwatson@debian.org>  Sat, 26 Jun 2004 14:12:47 +0100

rootskel (0.76) unstable; urgency=low

  * Colin Watson
    - Mount /sys if sysfs is available (2.6).
    - Add 2.6 initrd template; currently differs only on powerpc.
    - Add an /etc/nsswitch.conf to force libnss_files for the passwd, group,
      and shadow databases.
    - Put kernel symlinks in /boot on powerpc (closes: #241569; requires
      yaboot-installer 0.0.21).
    - Add myself to Uploaders.

 -- Colin Watson <cjwatson@debian.org>  Thu, 20 May 2004 02:58:56 +0100

rootskel (0.75) unstable; urgency=low

  * Joey Hess
    - Break env2debconf out of libdebian-installer so it can source the
      confmodule, and make it support preseeding questions that do not exist
      in the initrd but are loaded with later udebs. Closes: #248147
    - Removed non-working source failure detection code in
      sbin/debian-installer.

 -- Joey Hess <joeyh@debian.org>  Sun,  9 May 2004 11:26:33 -0400

rootskel (0.74) unstable; urgency=low

  * Joey Hess
    - Sparc kernels do not use an initrd, so set