@@ -1,6 +1,0 @@
-dir = etc/init.d
-
-files_exec = \
-	rcS
-
-include ../../../Makefile.inc
