@@ -2,7 +2,7 @@
 # busybox init configuration for debian-installer
 
 # main rc script
-null::sysinit:/etc/init.d/rcS
+null::sysinit:/sbin/debian-installer-startup
 
 # main setup program
 ::respawn:/sbin/debian-installer
