@@ -1,5 +1,5 @@
 echo -n "Starting system log daemon: "
-modprobe -q unix || true
+modprobe -q unix 2> /dev/null || true
 /sbin/syslogd -m 0 -O /var/log/syslog
 echo -n "syslogd, "
 /sbin/klogd -c 2
