@@ -1,0 +1,8 @@
+# Use boot variable, but make it possible to change it in main-menu
+if [ "$DEBCONF_PRIORITY" ] ; then
+	logger -t S50priority "Setting debconf/priority to '$DEBCONF_PRIORITY'."
+	debconf-set debconf/priority "$DEBCONF_PRIORITY"
+	unset DEBCONF_PRIORITY
+fi
+
+env2debconf
