@@ -4,49 +4,27 @@ DEB_HOST_GNU_CPU    ?= $(shell dpkg-architecture -qDEB_HOST_GNU_CPU)
 DEB_HOST_GNU_SYSTEM ?= $(shell dpkg-architecture -qDEB_HOST_GNU_SYSTEM)
 DEB_HOST_GNU_TYPE   ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 
-files_menu =
-files_term = 
-files_keyboard =
-
-extra_files =
+files += \
+	S60frontend
 
 ifeq ($(DEB_HOST_GNU_SYSTEM),linux)
-  files_menu = \
-	S70menu-linux
-
-  files_term = \
+  ifeq ($(DEB_HOST_GNU_CPU),s390)
+    files += \
+	S30term-linux-s390
+  else
+    files += \
 	S30term-linux \
-	S40utf8-linux \
-	S90utf8-linux
-
+	S35framebuffer-linux
+  endif
   ifeq ($(DEB_HOST_GNU_CPU),i386)
     files_term += \
 	S33framebuffer-module-linux-i386
   endif
-  ifeq ($(DEB_HOST_GNU_CPU),s390)
-    files_term += \
-	S30term-linux-s390
-  else
-    files_term += \
-	S35framebuffer-linux
-  endif
 
-  ifeq ($(DEB_HOST_GNU_CPU),powerpc)
-    files_keyboard += \
-	S45keyboard-linux-powerpc
-  endif
+  files += \
+	S40utf8-linux \
+	S70menu-linux \
+	S90utf8-linux
 endif
-
-files = \
-	S60frontend \
-	S20templates \
-	S25env2debconf \
-	S50priority
-
-files += \
-	$(files_menu) \
-	$(files_term) \
-	$(files_keyboard) \
-	$(extra_files)
 
 include ../../../Makefile.inc
