@@ -1,1 +1,1 @@
-debconf -o d-i $MENU
+/lib/debian-installer/menu
