@@ -2,6 +2,7 @@ dir = sbin
 
 files_exec = \
 	debian-installer \
+	debian-installer-startup \
 	env2debconf \
 	shutdown \
 	init
