@@ -1,5 +1,0 @@
-dir = usr/lib
-
-subdirs_empty = prebaseconfig.d
-
-include ../../../Makefile.inc
