@@ -1,5 +1,0 @@
-dir = var/lib
-
-subdirs_empty = apt-install
-
-include ../../../Makefile.inc
